# silvernews

./: .gitignore  README.md  compose-dev.yml  compose.yml
service-auth/: Dockerfile  Program.cs  appsettings.json  service-auth.csproj
service-auth/Areas/Identity/Pages/: Error.cshtml.cs  _ViewImports.cshtml
service-auth/Areas/Identity/Pages/Account/: AccessDenied.cshtml.cs  ConfirmEmail.cshtml.cs  (+15 more)
service-auth/Controllers/: AuthController.cs  HomeController.cs
service-auth/Data/: ApplicationDbContext.cs  DataProtectionContext.cs
service-auth/Data/Migrations/: 00000000000000_CreateIdentitySchema.Designer.cs  00000000000000_CreateIdentitySchema.cs  20240612120645_Create_IdentitySchema.Designer.cs  20240612120645_Create_IdentitySchema.cs  ApplicationDbContextModelSnapshot.cs
service-auth/Data/MigrationsDP/: 20240612120319_Create_DataProtectionTable.Designer.cs  20240612120319_Create_DataProtectionTable.cs  DataProtectionContextModelSnapshot.cs
service-auth/Models/: ErrorViewModel.cs  JwtOptions.cs
service-auth/Properties/: launchSettings.json
service-auth/Views/: _ViewImports.cshtml
service-auth/Views/Home/: Index.cshtml
service-auth/Views/Shared/: _Layout.cshtml
service-stories/: Dockerfile  pyproject.toml
service-stories/api/: __init__.py  db_interactor.py  main.py  poetryrun.py  story.py
service-stories/api/tests/: test_main.py
ui/: index.html  package-lock.json  package.json
ui/src/: App.vue
ui/src/components/: TheHeader.vue
ui/src/components/__tests__/: HelloWorld.spec.js
ui/src/stores/: theme.js
ui/src/views/: HomeView.vue
(+16 files in other folders)
