[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["builder555", "mcraa"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.136.3"
uvicorn = "^0.49.0"
pytest-watch = "^4.2.0"
black = "^26.5.1"
pyhumps = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pytest = "^9.0.3"
httpx = "^0.28.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
dev = "api.poetryrun:dev"
watch = "api.poetryrun:watch"
test = "api.poetryrun:test"

[tool.black]
line-length = 100
